--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,5 +12,6 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
+		<p>I am not a programmer. My brain doesn't like twisting into these knots.</p>
 	</body>
 </html>
