--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,6 +12,6 @@
 	</head>
 	<body>
 		<h1>About this Experiment</h1>
-		<p>I'm not a negative thinker, but I am a realist. It's only a matter of time before I forget a freakin' semi colon somewhere in html and break something.</p>
+		<p>I'm not a negative thinker, but I am a realist. It's only a matter of time before I forget a freakin' semi colon somewhere and break something.</p>
 	</body>
 </html>
