--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,6 +11,8 @@
 		<title>About this Experiment</title>
 	</head>
 	<body>
+        <a href="/">Home</a>
+        <a href="/about/">About</a>
 		<h1>About this Experiment</h1>
 		<p>I'm not a negative thinker, but I am a realist. It's only a matter of time before I forget a freakin' semi colon somewhere and break something.</p>
 	</body>
