update nav links and add blog page

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,20 +1,17 @@
----
-
----
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>About this Experiment</title>
+		<title>Blog</title>
 	</head>
 	<body>
         <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
-		<h1>About this Experiment</h1>
-		<p>I'm not a negative thinker, but I am a realist. It's only a matter of time before I forget a freakin' semi colon somewhere and break something.</p>
+		<h1>Blog</h1>
+		<p>The tutorial told me to "Click on the localhost link in your terminal window" and the first time I saw it, but the next time I tried, it was nowhere to be found. I had to Google to learn that I needed to put "npm start" into Terminal to show it again.</p>
+        <p>I'm not a programmer.</p>
 	</body>
 </html>
