--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+        <a href="/about/">About</a>
+        <a href="/blog/">Blog</a>
 		<h1>Astro</h1>
 		<p>I am not a programmer. My brain doesn't like twisting into these knots.</p>
 	</body>
