--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -11,7 +11,7 @@
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
 		<h1>Blog</h1>
-		<p>The tutorial told me to "Click on the localhost link in your terminal window" and the first time I saw it, but the next time I tried, it was nowhere to be found. I had to Google to learn that I needed to put "npm start" into Terminal to show it again.</p>
+		<p>The tutorial told me to "Click on the localhost link in your terminal window" and I saw it the first time, but the next time I tried, it was nowhere to be found. I had to Google to learn that I needed to put "npm start" into Terminal to show it again.</p>
         <p>I'm not a programmer.</p>
 	</body>
 </html>
