--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,5 +13,10 @@
 		<h1>Blog</h1>
 		<p>The tutorial told me to "Click on the localhost link in your terminal window" and I saw it the first time, but the next time I tried, it was nowhere to be found. I had to Google to learn that I needed to put "npm start" into Terminal to show it again.</p>
         <p>I'm not a programmer.</p>
+        <ul>
+            <li><a href="/posts/post-1/">Post 1</a></li>
+            <li><a href="/posts/post-2/">Post 2</a></li>
+            <li><a href="/posts/post-3/">Post 3</a></li>          
+          </ul>
 	</body>
 </html>
