--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,16 +1,19 @@
+---
+const pageTitle = "Blog";
+---
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Blog</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
         <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
-		<h1>Blog</h1>
+		<h1>{pageTitle}</h1>
 		<p>The tutorial told me to "Click on the localhost link in your terminal window" and I saw it the first time, but the next time I tried, it was nowhere to be found. I had to Google to learn that I needed to put "npm start" into Terminal to show it again.</p>
         <p>I'm not a programmer.</p>
         <ul>
